--- a/Editor/UI/EditorWindows/AvatarLoaderEditor/AvatarLoaderEditorWindow.uxml
+++ b/Editor/UI/EditorWindows/AvatarLoaderEditor/AvatarLoaderEditorWindow.uxml
@@ -1,5 +1,5 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
-    <ui:Template name="HeaderTemplate" src="Templates/HeaderTemplate.uxml" />
+    <ui:Template name="HeaderTemplate" src="../Templates/HeaderTemplate.uxml" />
     <ui:Instance template="HeaderTemplate" name="HeaderTemplate" style="flex-shrink: 0;" />
     <ReadyPlayerMe.AvatarLoader.Editor.AvatarUrlTemplate style="flex-shrink: 0;" />
     <ui:VisualElement name="Extras" style="flex-shrink: 0;">
