--- a/Editor/UI/EditorWindows/SettingsWindow/SettingsEditorWindow.uxml
+++ b/Editor/UI/EditorWindows/SettingsWindow/SettingsEditorWindow.uxml
@@ -1,4 +1,10 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
-    <ui:Template name="HeaderTemplate" src="../Templates/HeaderTemplate.uxml" />
+    <ui:Template name="HeaderTemplate" src="project://database/Assets/Ready%20Player%20Me/Avatar%20Loader/Editor/UI/EditorWindows/Templates/HeaderTemplate.uxml?fileID=9197481963319205126&amp;guid=07a53a11b73eff34685f226bf17a42d4&amp;type=3#HeaderTemplate" />
+    <ui:Template name="SubdomainTemplate" src="project://database/Assets/Ready%20Player%20Me/Avatar%20Loader/Editor/UI/EditorWindows/Templates/Resources/SubdomainTemplate.uxml?fileID=9197481963319205126&amp;guid=46ff0eb88845af64197b452221dd6ede&amp;type=3#SubdomainTemplate" />
+    <ui:Template name="AvatarConfigTemplate" src="project://database/Assets/Ready%20Player%20Me/Avatar%20Loader/Editor/UI/EditorWindows/Templates/Resources/AvatarConfigTemplate.uxml?fileID=9197481963319205126&amp;guid=850efdc3488431049a92498a649cf827&amp;type=3#AvatarConfigTemplate" />
+    <Style src="project://database/Assets/Ready%20Player%20Me/Avatar%20Loader/Editor/UI/EditorWindows/CommonStyle.uss?fileID=7433441132597879392&amp;guid=af10d225241bded4188e82d92db9230f&amp;type=3#CommonStyle" />
     <ui:Instance template="HeaderTemplate" name="HeaderTemplate" style="flex-shrink: 0;" />
+    <ui:Instance template="SubdomainTemplate" name="SubdomainTemplate" />
+    <ui:Label tabindex="-1" text="Avatar Settings" display-tooltip-when-elided="true" class="headingText" />
+    <ui:Instance template="AvatarConfigTemplate" name="AvatarConfigTemplate" />
 </ui:UXML>
