--- a/Editor/UI/EditorWindows/SettingsWindow/SettingsEditorWindow.uxml
+++ b/Editor/UI/EditorWindows/SettingsWindow/SettingsEditorWindow.uxml
@@ -1,10 +1,37 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <ui:Template name="HeaderTemplate" src="project://database/Assets/Ready%20Player%20Me/Avatar%20Loader/Editor/UI/EditorWindows/Templates/HeaderTemplate.uxml?fileID=9197481963319205126&amp;guid=07a53a11b73eff34685f226bf17a42d4&amp;type=3#HeaderTemplate" />
-    <ui:Template name="SubdomainTemplate" src="project://database/Assets/Ready%20Player%20Me/Avatar%20Loader/Editor/UI/EditorWindows/Templates/Resources/SubdomainTemplate.uxml?fileID=9197481963319205126&amp;guid=46ff0eb88845af64197b452221dd6ede&amp;type=3#SubdomainTemplate" />
     <ui:Template name="AvatarConfigTemplate" src="project://database/Assets/Ready%20Player%20Me/Avatar%20Loader/Editor/UI/EditorWindows/Templates/Resources/AvatarConfigTemplate.uxml?fileID=9197481963319205126&amp;guid=850efdc3488431049a92498a649cf827&amp;type=3#AvatarConfigTemplate" />
+    <ui:Template name="GltfDeferAgentTemplate" src="project://database/Assets/Ready%20Player%20Me/Avatar%20Loader/Editor/UI/EditorWindows/Templates/Resources/GltfDeferAgentTemplate.uxml?fileID=9197481963319205126&amp;guid=04375d43dfab75c4aad92fe6197b1a70&amp;type=3#GltfDeferAgentTemplate" />
+    <ui:Template name="SubdomainTemplate" src="project://database/Assets/Ready%20Player%20Me/Avatar%20Loader/Editor/UI/EditorWindows/Templates/Resources/SubdomainTemplate.uxml?fileID=9197481963319205126&amp;guid=46ff0eb88845af64197b452221dd6ede&amp;type=3#SubdomainTemplate" />
     <Style src="project://database/Assets/Ready%20Player%20Me/Avatar%20Loader/Editor/UI/EditorWindows/CommonStyle.uss?fileID=7433441132597879392&amp;guid=af10d225241bded4188e82d92db9230f&amp;type=3#CommonStyle" />
     <ui:Instance template="HeaderTemplate" name="HeaderTemplate" style="flex-shrink: 0;" />
     <ui:Instance template="SubdomainTemplate" name="SubdomainTemplate" />
-    <ui:Label tabindex="-1" text="Avatar Settings" display-tooltip-when-elided="true" class="headingText" />
-    <ui:Instance template="AvatarConfigTemplate" name="AvatarConfigTemplate" />
+    <ui:VisualElement name="AvatarSettings" style="flex-grow: 0; background-color: rgba(0, 0, 0, 0); height: auto; align-self: auto; justify-content: flex-start; align-items: stretch; flex-direction: flex-start; flex-shrink: 0;">
+        <ui:VisualElement name="AvatarSettingsHeading" class="heading">
+            <ui:Label text="Avatar Settings" display-tooltip-when-elided="true" class="headingText" />
+        </ui:VisualElement>
+        <ui:Instance template="AvatarConfigTemplate" name="AvatarConfigTemplate" />
+        <ui:Instance template="GltfDeferAgentTemplate" name="GltfDeferAgentTemplate" style="flex-shrink: 0;" />
+    </ui:VisualElement>
+    <ui:VisualElement name="AvatarCaching" style="flex-grow: 0; background-color: rgba(0, 0, 0, 0); flex-shrink: 0;">
+        <ui:VisualElement name="AvatarCachingHeading" class="heading">
+            <ui:Label text="Avatar Caching" display-tooltip-when-elided="true" class="headingText" />
+            <ui:Button text="?" display-tooltip-when-elided="true" name="HelpButton" class="button2" style="margin-left: 0; margin-right: 0; margin-top: 0; margin-bottom: 0; padding-left: 0; padding-right: 0; padding-top: 0; padding-bottom: 0; width: 20px; height: 20px; border-top-left-radius: 15px; border-bottom-left-radius: 15px; border-top-right-radius: 15px; border-bottom-right-radius: 15px;" />
+        </ui:VisualElement>
+        <ui:Toggle label="Avatar caching enabled" name="AvatarCachingEnabled" style="flex-direction: row-reverse; align-items: center; justify-content: flex-start; width: 198px; margin-left: 15px; margin-top: 5px; align-self: auto; flex-shrink: 0; white-space: nowrap;" />
+        <ui:VisualElement name="VisualElement" style="flex-grow: 0; background-color: rgba(0, 0, 0, 0); flex-direction: row; align-items: center; justify-content: flex-start; align-self: stretch; margin-left: 15px; margin-right: 15px; height: 40px; margin-top: 10px;">
+            <ui:Button text="Clear local avatar cache" display-tooltip-when-elided="true" name="Button" style="flex-grow: 0; white-space: nowrap; -unity-text-align: middle-center; text-overflow: ellipsis; -unity-font-style: bold; align-self: stretch; width: 300px; margin-left: 0;" />
+            <ui:Button text="Show in Explorer" display-tooltip-when-elided="true" name="Button" style="flex-grow: 0; -unity-font-style: bold; align-self: stretch; align-items: stretch; width: 300px;" />
+        </ui:VisualElement>
+    </ui:VisualElement>
+    <ui:VisualElement name="Other" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0);">
+        <ui:VisualElement name="OtherHeading" class="heading">
+            <ui:Label text="Other" display-tooltip-when-elided="true" class="headingText" />
+        </ui:VisualElement>
+        <ui:VisualElement style="flex-grow: 0; background-color: rgba(0, 0, 0, 0); flex-direction: row; justify-content: flex-start; align-self: stretch; align-items: center;">
+            <ui:Toggle label="Analytics enabled" name="AvatarCachingEnabled" style="flex-direction: row-reverse; align-items: center; justify-content: flex-start; width: 198px; margin-left: 15px; margin-top: 5px; align-self: stretch;" />
+            <ui:Label tabindex="-1" text="(Privacy Policy)" display-tooltip-when-elided="true" style="-unity-font-style: bold;" />
+        </ui:VisualElement>
+        <ui:Toggle label="Avatar caching enabled" name="AvatarCachingEnabled" style="flex-direction: row-reverse; align-items: center; justify-content: flex-start; width: 198px; margin-left: 15px; margin-top: 5px; align-self: stretch;" />
+    </ui:VisualElement>
 </ui:UXML>
