--- a/Editor/UI/EditorWindows/SettingsWindow/SettingsEditorWindow.uxml
+++ b/Editor/UI/EditorWindows/SettingsWindow/SettingsEditorWindow.uxml
@@ -2,7 +2,7 @@
     <ui:Template name="HeaderTemplate" src="project://database/Assets/Ready%20Player%20Me/Avatar%20Loader/Editor/UI/EditorWindows/Templates/HeaderTemplate.uxml?fileID=9197481963319205126&amp;guid=07a53a11b73eff34685f226bf17a42d4&amp;type=3#HeaderTemplate" />
     <Style src="project://database/Assets/Ready%20Player%20Me/Avatar%20Loader/Editor/UI/EditorWindows/CommonStyle.uss?fileID=7433441132597879392&amp;guid=af10d225241bded4188e82d92db9230f&amp;type=3#CommonStyle" />
     <ui:Instance template="HeaderTemplate" name="HeaderTemplate" style="flex-shrink: 0;" />
-    <ReadyPlayerMe.AvatarLoader.Editor.SubdomainTemplate />
+    <ReadyPlayerMe.AvatarLoader.Editor.SubdomainTemplate style="flex-shrink: 0;" />
     <ui:VisualElement name="AvatarSettings" style="flex-grow: 0; background-color: rgba(0, 0, 0, 0); height: auto; align-self: auto; justify-content: flex-start; align-items: stretch; flex-direction: flex-start; flex-shrink: 0;">
         <ui:VisualElement name="AvatarSettingsHeading" class="heading">
             <ui:Label text="Avatar Settings" display-tooltip-when-elided="true" class="headingText" />
@@ -26,10 +26,10 @@
             <ui:Label text="Other" display-tooltip-when-elided="true" class="headingText" />
         </ui:VisualElement>
         <ui:VisualElement name="AnalyticsEnabledContainer" style="flex-grow: 0; background-color: rgba(0, 0, 0, 0); flex-direction: row; justify-content: flex-start; align-self: flex-start; align-items: center; flex-shrink: 0;">
-            <ui:Toggle label="Analytics enabled" name="AnalyticsEnabledToggle" style="flex-direction: row-reverse; margin-left: 15px; margin-top: 10px; align-items: center;" />
+            <ui:Toggle label="Analytics enabled" name="AnalyticsEnabledToggle" style="flex-direction: row-reverse; margin-left: 15px; margin-top: 5px; align-items: center;" />
             <ui:Label tabindex="-1" text="(Privacy Policy)" display-tooltip-when-elided="true" name="PrivacyPolicyLabel" style="-unity-font-style: bold; margin-top: 10px;" />
         </ui:VisualElement>
-        <ui:Toggle label="Logging enabled" name="LoggingEnabledToggle" style="flex-direction: row-reverse; align-self: flex-start; margin-left: 15px; margin-top: 10px;" />
+        <ui:Toggle label="Logging enabled" name="LoggingEnabledToggle" style="flex-direction: row-reverse; align-self: flex-start; margin-left: 15px; margin-top: 5px;" />
     </ui:VisualElement>
     <ui:VisualElement name="Support" style="flex-grow: 0; background-color: rgba(0, 0, 0, 0); flex-shrink: 0;">
         <ui:VisualElement name="SupportHeading" class="heading">
