--- a/Editor/UI/EditorWindows/SettingsWindow/SettingsEditorWindow.uxml
+++ b/Editor/UI/EditorWindows/SettingsWindow/SettingsEditorWindow.uxml
@@ -27,7 +27,7 @@
         </ui:VisualElement>
         <ui:VisualElement name="AnalyticsEnabledContainer" style="flex-grow: 0; background-color: rgba(0, 0, 0, 0); flex-direction: row; justify-content: flex-start; align-self: flex-start; align-items: center; flex-shrink: 0;">
             <ui:Toggle label="Analytics enabled" name="AnalyticsEnabledToggle" style="flex-direction: row-reverse; margin-left: 15px; margin-top: 5px; align-items: center;" />
-            <ui:Label tabindex="-1" text="(Privacy Policy)" display-tooltip-when-elided="true" name="PrivacyPolicyLabel" style="-unity-font-style: bold; margin-top: 10px;" />
+            <ui:Label tabindex="-1" text="(Privacy Policy)" display-tooltip-when-elided="true" name="PrivacyPolicyLabel" style="-unity-font-style: bold; margin-top: 3px; -unity-text-align: middle-left;" />
         </ui:VisualElement>
         <ui:Toggle label="Logging enabled" name="LoggingEnabledToggle" style="flex-direction: row-reverse; align-self: flex-start; margin-left: 15px; margin-top: 5px;" />
     </ui:VisualElement>
@@ -36,9 +36,9 @@
             <ui:Label text="Support" display-tooltip-when-elided="true" class="headingText" />
         </ui:VisualElement>
         <ui:VisualElement name="Buttons" style="flex-grow: 0; background-color: rgba(0, 0, 0, 0); flex-direction: row; align-self: auto; justify-content: space-between; align-items: center; height: 40px; margin-left: 15px; margin-right: 15px; margin-top: 10px; width: 450px; flex-shrink: 0;">
-            <ui:Button text="Documentation" display-tooltip-when-elided="true" name="DocumentationButton" style="width: 150px; align-items: auto; flex-grow: 0; justify-content: space-around; align-self: stretch;" />
-            <ui:Button text="FAQ" display-tooltip-when-elided="true" name="FaqButton" style="width: 150px; justify-content: space-around; align-self: stretch; align-items: auto;" />
-            <ui:Button text="Discord" display-tooltip-when-elided="true" name="DiscordButton" style="width: 150px; justify-content: space-around; align-self: stretch; align-items: auto;" />
+            <ui:Button text="Documentation" display-tooltip-when-elided="true" name="DocumentationButton" style="width: 150px; align-items: auto; flex-grow: 0; justify-content: space-around; align-self: stretch; margin-left: 0; margin-right: 0;" />
+            <ui:Button text="FAQ" display-tooltip-when-elided="true" name="FaqButton" style="width: 150px; justify-content: space-around; align-self: stretch; align-items: auto; margin-left: 6px;" />
+            <ui:Button text="Discord" display-tooltip-when-elided="true" name="DiscordButton" style="width: 150px; justify-content: space-around; align-self: stretch; align-items: auto; margin-right: 0;" />
         </ui:VisualElement>
     </ui:VisualElement>
 </ui:UXML>
