--- a/Editor/UI/EditorWindows/SetupGuide/SetupGuide.uxml
+++ b/Editor/UI/EditorWindows/SetupGuide/SetupGuide.uxml
@@ -29,7 +29,9 @@
         <ui:Toggle label="Analytics Enabled" name="AnalyticsEnabledToggle" style="margin-left: 15px; margin-right: 15px; flex-direction: row-reverse; align-items: center; justify-content: space-between; align-self: flex-start; margin-top: 15px; margin-bottom: 15px;" />
     </ui:VisualElement>
     <ui:VisualElement name="Footer" style="flex-grow: 0; background-color: rgba(0, 0, 0, 0); flex-direction: row; align-items: center; justify-content: space-between; margin-left: 15px; margin-right: 15px; height: 34px; flex-shrink: 0;">
-        <ui:Button text="Back" display-tooltip-when-elided="true" name="BackButton" style="align-self: stretch; width: 50px;" />
-        <ui:Button text="Next" display-tooltip-when-elided="true" name="NextButton" style="align-self: stretch; width: 50px;" />
+        <ui:Button text="Back" display-tooltip-when-elided="true" name="BackButton" style="align-self: stretch; width: 50px; display: flex; visibility: hidden;" />
+        <ui:Button text="Next" display-tooltip-when-elided="true" name="NextButton" style="align-self: stretch; width: 50px; display: flex; visibility: visible;" />
+        <ui:Button text="Finish Setup" display-tooltip-when-elided="true" name="FinishSetupButton" style="align-self: stretch; width: 92px; margin-left: 170px; display: none;" />
+        <ui:Button text="Open QuickStart Scene" display-tooltip-when-elided="true" name="OpenQuickStartButton" style="align-self: stretch; width: 148px; display: none;" />
     </ui:VisualElement>
 </ui:UXML>
