--- a/Editor/UI/EditorWindows/SetupGuide/SetupGuide.uxml
+++ b/Editor/UI/EditorWindows/SetupGuide/SetupGuide.uxml
@@ -2,7 +2,7 @@
     <ui:Template name="HeaderTemplate" src="../Templates/HeaderTemplate.uxml" />
     <Style src="../CommonStyle.uss" />
     <ui:Instance template="HeaderTemplate" name="HeaderTemplate" style="flex-shrink: 0;" />
-    <ui:VisualElement name="SubdomainPanel" style="flex-grow: 0; background-color: rgba(0, 0, 0, 0); margin-top: 0; height: 250px; flex-shrink: 0; display: none;">
+    <ui:VisualElement name="SubdomainPanel" style="flex-grow: 0; background-color: rgba(0, 0, 0, 0); margin-top: 0; height: 250px; flex-shrink: 0; display: none; width: 500px;">
         <ui:VisualElement name="Heading" class="heading" style="flex-grow: 0; background-color: rgba(0, 0, 0, 0);">
             <ui:Label tabindex="-1" text="Enter your subdomain" display-tooltip-when-elided="true" class="headingText" />
         </ui:VisualElement>
@@ -11,7 +11,7 @@
         <ReadyPlayerMe.AvatarLoader.Editor.SubdomainTemplate class="SubdomainTemplate" style="margin-top: 15px; flex-shrink: 0;" />
         <ui:Toggle label="I don&apos;t have an account. Use demo subomain instead." name="UseDemoSubdomainToggle" style="margin-left: 15px; margin-right: 15px; flex-direction: row-reverse; align-items: center; justify-content: space-between; align-self: flex-start; margin-top: 15px; margin-bottom: 15px;" />
     </ui:VisualElement>
-    <ui:VisualElement name="AvatarConfigPanel" style="flex-grow: 0; background-color: rgba(0, 0, 0, 0); margin-top: 0; height: 250px; flex-shrink: 0; display: none;">
+    <ui:VisualElement name="AvatarConfigPanel" style="flex-grow: 0; background-color: rgba(0, 0, 0, 0); margin-top: 0; height: 250px; flex-shrink: 0; display: none; width: 500px;">
         <ui:VisualElement name="Heading" class="heading" style="flex-grow: 0; background-color: rgba(0, 0, 0, 0);">
             <ui:Label tabindex="-1" text="Avatar Configuration" display-tooltip-when-elided="true" class="headingText" />
         </ui:VisualElement>
@@ -19,7 +19,7 @@
         <ReadyPlayerMe.AvatarLoader.Editor.AvatarConfigTemplate style="margin-top: 15px;" />
         <ui:Label tabindex="-1" text="You can change this setting later, or fine-tune with your own created Scriptable Object." display-tooltip-when-elided="true" name="Info" style="margin-left: 15px; margin-right: 15px; white-space: normal; margin-top: 5px;" />
     </ui:VisualElement>
-    <ui:VisualElement name="AnalyticsPanel" style="flex-grow: 0; background-color: rgba(0, 0, 0, 0); margin-top: 0; height: 250px; flex-shrink: 0; display: flex;">
+    <ui:VisualElement name="AnalyticsPanel" style="flex-grow: 0; background-color: rgba(0, 0, 0, 0); margin-top: 0; height: 250px; flex-shrink: 0; display: flex; width: 500px;">
         <ui:VisualElement name="Heading" class="heading" style="flex-grow: 0; background-color: rgba(0, 0, 0, 0);">
             <ui:Label tabindex="-1" text="Help us improve Ready Player Me SDK" display-tooltip-when-elided="true" class="headingText" />
         </ui:VisualElement>
@@ -27,7 +27,7 @@
         <ui:Label tabindex="-1" text="Read our Privacy Policy and learn how we use the data here." display-tooltip-when-elided="true" name="PrivacyUrl" style="margin-left: 15px; margin-right: 15px; white-space: normal; margin-top: 15px; margin-bottom: 15px;" />
         <ui:Toggle label="Analytics Enabled" name="AnalyticsEnabledToggle" style="margin-left: 15px; margin-right: 15px; flex-direction: row-reverse; align-items: center; justify-content: space-between; align-self: flex-start; margin-top: 15px; margin-bottom: 15px;" />
     </ui:VisualElement>
-    <ui:VisualElement name="Footer" style="flex-grow: 0; background-color: rgba(0, 0, 0, 0); flex-direction: row; align-items: center; justify-content: space-between; margin-left: 15px; margin-right: 15px; height: 34px; flex-shrink: 0;">
+    <ui:VisualElement name="Footer" style="flex-grow: 0; background-color: rgba(0, 0, 0, 0); flex-direction: row; align-items: center; justify-content: space-between; margin-left: 15px; margin-right: 15px; height: 34px; flex-shrink: 0; width: 470px;">
         <ui:Button text="Back" display-tooltip-when-elided="true" name="BackButton" style="align-self: stretch; width: 50px; display: flex; visibility: hidden;" />
         <ui:Button text="Next" display-tooltip-when-elided="true" name="NextButton" style="align-self: stretch; width: 50px; display: flex; visibility: visible;" />
         <ui:Button text="Finish Setup" display-tooltip-when-elided="true" name="FinishSetupButton" style="align-self: stretch; width: 92px; margin-left: 170px; display: none;" />
